Changes in version 0.3-0
    * added D-Stream
    * Improved support for animations

Changes in version 0.2-0 (2/21/14)
    * major restructuring

Initial version 0.1-1 (8/16/13)