@@ -1,6 +1,9 @@
 Changes in version 0.3-0
     * added D-Stream
-    * Improved support for animations
+    * improved support for animations
+    * new decay models for tNN
+    * DSC_Hierarchical and DSC_Kmeans gained min_weight to filter low weight
+        micro-clusters before reculstering
 
 Changes in version 0.2-0 (2/21/14)
     * major restructuring
